k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hksyu-super-schedule
spec:
  selector:
    app: hksyu-super-schedule
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
